# decision_data

./: .flake8  .gitignore  ANALYSIS_DECRYPTION_FAILURE.md  CLAUDE.md  INSTALL_FFMPEG.md  README.md  SESSION_SUMMARY_OCT20.md  check_dynamodb_jobs.py  create_missing_transcription_jobs.py  mypy.ini  pyproject.toml  pytest.ini  setup_github_secrets.md  start_api_server.sh  test_cost_tracking_workflow.py  tox.ini  tox_backup.ini
.github/workflows/: deploy.yml
decision_data/: start_api_server.sh
decision_data/data_structure/: models.py
decision_data/prompts/: daily_summary.txt
decision_data/scripts/: README.md  check_audio_files.py  check_audio_status.py  check_dynamodb_jobs.py  check_jobs.py  check_user_encryption_keys.py  cleanup_expired_jobs.py  cleanup_failed_jobs.py  cleanup_processing_jobs.py  create_cost_tracking_tables.py  create_daily_summary_tracking_table.py  create_new_tables.py  install_ffmpeg.sh  migrate_encrypt_transcripts.py  migrate_job_timestamps.py  migrate_recorded_at.py  smart_cleanup_jobs.py  test_backend_connectivity.py
docs/: ANDROID_APP_SERIALIZATION_FIX.md  ANDROID_CRASH_ON_FIRST_LAUNCH_FIX.md  ANDROID_UI_IMPROVEMENTS.md  AUTOMATIC_DAILY_SUMMARY_SCHEDULER.md  AUTOMATIC_DAILY_SUMMARY_SUMMARY.md  AUTOMATIC_TRANSCRIPTION.md  BACKGROUND_RECORDING_IMPLEMENTATION.md  BACKGROUND_RECORDING_SUMMARY.md  CLEANUP_COMPLETE.md  CODEBASE_OVERVIEW.md  COST_TRACKING_IMPLEMENTATION.md  CREDIT_DISPLAY_FIX.md  CREDIT_MANAGEMENT_FEATURE.md  DAILY_SUMMARY_IMPLEMENTATION.md  DAILY_SUMMARY_QUICK_START.md  DAILY_SUMMARY_TRACKING_FIX.md  DEPLOYMENT_SUMMARY_DAILY_SUMMARY.md  FINAL_SUMMARY.md  HOTFIX_SUMMARY_OCT20_CRASH.md  JOB_ERROR_HANDLING.md  LONG_AUDIO_RECORDING_ANALYSIS.md  MONGODB_REMOVAL_DATA_PRIVACY.md  PRESIGNED_URL_FIX.md  STREAMING_AUDIO_IMPLEMENTATION.md  STRIPE_INTEGRATION.md  STRIPE_PAYMENT_FLOW.md  SUMMARY_MANAGEMENT_IMPLEMENTATION.md  TIMEZONE_FIX.md  TRANSCRIPTION_FIX_COMPLETE.md  api_endpoints.md  architecture.md  architecture_analysis.md  atlassian_api_guide.md  aws_ses_migration.md  cloudflare_ssl_setup.md  deployment_guide.md  detailed_error_logging.md  dynamodb_migration_guide.md  encryption_backend.md  implementation_log.md  (+10 more)
tests/: test_audio_workflow.py  test_mongodb_client.py  test_sample.py
tests/workflow/: test_daily_summary.py  (+1 more)
(+35 files in other folders)
