[tool.poetry]
name = "decision-data"
version = "0.1.0"
description = ""
authors = ["Yang Liu <yangliu3456@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.3"
mypy = "^1.13.0"
black = "^24.10.0"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
