[tool.poetry]
name = "decision-data"
version = "0.1.0"
description = ""
authors = ["Yang Liu <yangliu3456@gmail.com>"]
readme = "README.md"

# Specify the packages to include
packages = [
    { include = "decision_data" }
]

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
praw = "^7.8.1"
pymongo = "^4.10.1"
loguru = "^0.7.2"
openai = "^1.55.0"

[tool.poetry.group.dev.dependencies]  
pytest = "^8.3.3"
coverage = "^7.6.4"
pytest-html = "^4.1.1"
pytest-json = "^0.4.0"
pytest-json-report = "^1.5.0"
mypy = "^1.13.0"
black = "^24.10.0"
flake8 = "^7.1.1"
ruff = "^0.7.2"
boto3-stubs = "^1.35.68"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
