[tool.poetry]
name = "decision-data"
version = "0.1.0"
description = "Collect data to help people make decisions."
authors = ["Yang Liu <yangliu3456@gmail.com>"]
readme = "README.md"

# Specify the packages to include
packages = [
    { include = "decision_data" }
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
praw = "^7.8.1"
pymongo = "^4.10.1"
loguru = "^0.7.2"
openai = "^1.55.0"
wave = "^0.0.2"
boto3 = "^1.35.72"
pyjwt = "^2.10.1"
argon2-cffi = "^25.1.0"
cryptography = "^46.0.1"
pycryptodome = "^3.23.0"
slowapi = "^0.1.9"
stripe = "^13.0.1"

[tool.poetry.group.dev.dependencies]  
pytest = "^8.3.3"
coverage = "^7.6.4"
pytest-html = "^4.1.1"
pytest-json = "^0.4.0"
pytest-json-report = "^1.5.0"
mypy = "^1.13.0"
black = "^24.10.0"
flake8 = "^7.1.1"
ruff = "^0.7.2"
mypy-boto3-s3 = "^1.35.69"
mypy-boto3-dynamodb = "^1.35.60"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
